--- a/css/style.css
+++ b/css/style.css
@@ -29,9 +29,20 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 1%;
 }
 
+
 .title {
+    background-color: var(--color1);
+    color: var(--background);
+    padding: 20px;
+}
+
+.subtitle {
     background-color: var(--color1);
     color: var(--background);
     padding: 20px;
@@ -43,9 +54,11 @@ body {
     display: flex;
     flex-direction: column;
     margin-left: 0px;
+    align-items: center;
+    text-align: center;
 }
 
 p {
     text-align: center;
-    color: var(--color2);
+    color: var(--color1);
 }
