--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 :root {
     --background: #dad9c5;
     --color1: #e772a9;
-    --color2: #b45e86;
+    --color2: #b55e87;
     --color3: #b8a1ac;
 }
 
 html {
     background-color: var(--background);
-    color: var(--color1);
+    color: var(--color2);
     overflow-x: hidden;
     font-family: 'BIZ UDMincho', serif;
 
@@ -54,8 +54,9 @@ body {
 
 p {
     text-align: center;
-    color: var(--color1);
+    color: var(--color2);
     line-height: 0.40in;
+    font-weight: bold;
 }
 
 img {
@@ -68,4 +69,13 @@ img {
 .about-me {
     inline-size: 5in;
     overflow-wrap: break-word;
+}
+
+.projects h2 {
+    margin-left: 400px;
+    margin-right: 400px;
+}
+
+.footer {
+    margin-top: 20px;
 }
